--- a/ch04[외부화 설정관리].md
+++ b/ch04[외부화 설정관리].md
@@ -15,15 +15,140 @@
 - 스프링에서는 `Environment`라는 편리한 추상화 기능을 통해, **모든 설정 데이터에 액세스**할 수 있다.
 
 ### 4.1.1 속성 : 설정을 위한 키-값 쌍
-//TODO
+#### 애플리케이션 속성의 사용
+````java
+@Autowired
+private Environment environment;
+
+public String getServerPort(){
+    return environment.getProperty("server.port");    
+}
+
+@Value("${server.port}")
+private String serverPort;
+
+public String getServerPort(){
+    return serverPort;    
+}
+````
+- 스프링 애플리케이션 속성에 액세스하는 방법
+  - Environment 인터페이스를 통해 속성에 접근
+  - @Value 애너테이션 주입
+  - @ConfigurationProperties
+#### 사용자 지정 속성 정의
+````java
+@SpringBootApplication
+@ConfigurationPropertiesScan
+public class CatalogServiceApplication {
+
+	public static void main(String[] args) {
+		SpringApplication.run(CatalogServiceApplication.class, args);
+	}
+
+}
+
+@ConfigurationProperties(prefix = "polar")
+public class PolarProperties {
+  private String greeting;
+
+  public String getGreeting() {
+    return greeting;
+  }
+}
+````
+````shell
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+dependencies {
+  ...
+  annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+  ...
+}
+````
+#### 사용자 지정 속성 사용
+````java
+@RestController
+public class HomeController {
+
+	private final PolarProperties polarProperties;
+
+	public HomeController(PolarProperties polarProperties) {
+		this.polarProperties = polarProperties;
+	}
+
+	@GetMapping("/")
+	public String getGreeting() {
+		return polarProperties.getGreeting();
+	}
+
+}
+````
+
 ### 4.1.2 프로파일 : 기능 플래그와 설정 그룹
+#### 프로파일을 기능 플래그로 사용
+````java
+@Component
+@Profile("testdata")
+public class BookDataLoader {
+	private final BookRepository bookRepository;
+	public BookDataLoader(BookRepository bookRepository) {
+		this.bookRepository = bookRepository;
+	}
+	@EventListener(ApplicationReadyEvent.class)
+	public void loadBookTestData() {
+		var book1 = new Book("1234567891", "Northern Lights", "Lyra Silverstar", 9.90);
+		var book2 = new Book("1234567892", "Polar Journey", "Iorek Polarson", 12.90);
+		bookRepository.save(book1);
+		bookRepository.save(book2);
+	}
+}
+````
+````shell
+bootRun {
+  systemProperty 'spring.profiles.active', 'testdata'
+}
+````
+
+#### 프로파일을 설정 그룹으로 사용
+- application-dev.yml 등
 
 ## 4.2 외부화된 구성 : 하나의 빌드, 여러 설정
+- 애플리케이셔ㅕㄴ을 빌드해서 패키지를 만든 후에 더 이상 변경하지 않는다는 것이다.
+  - 설정 변경이 필요한 경우 **외부에서 이루어 진다.**
+````
+polar.greeting 속성값
+왼쪽이 우선순위가 제일 높임
+CLI => JVM => 환경 변수 => 속성 파일
+````
 ### 4.2.1 커맨드라인 인수를 통한 애플리케이션 설정
+````shell
+java -jar build/libs/catalog-service-0.0.1-SNAPSHOT.jar --polar.greeting="welcome CLI"
+````
+![img.png](images/ch04/img.png)
 ### 4.2.2 JVM 시스템 속성을 통해 애플리케이션 구성
+````shell
+java -Dpolar.greeting="welcome jvm" -jar build/libs/catalog-service-0.0.1-SNAPSHOT.jar
+````
+![img_1.png](images/ch04/img_1.png)
+
+````shell
+# cli 가 우선순위가 높다.
+java -Dpolar.greeting="welcome jvm" -jar build/libs/catalog-service-0.0.1-SNAPSHOT.jar --polar.greeting="welcome CLI"
+````
+![img_2.png](images/ch04/img_2.png)
+
 ### 4.2.3 환경 변수를 통해 애플리케이션 구성
+- POLAR_GREETING 은 polar.greeting 으로 정의된다.
+````shell
+POLAR_GREETING="welcome env" java -jar build/libs/catalog-service-0.0.1-SNAPSHOT.jar
+````
+![img_3.png](images/ch04/img_3.png)
 
 ## 4.3 스프링 클라우드 컨피그 서버로 중앙식 설정 관리하기
+
 ### 4.3.1 깃을 통한 설정 데이터 저장
 ### 4.3.2 설정 서버 구성
 ### 4.3.3 복원력 높은 설정 서버 생성
