--- a/ch04[외부화 설정관리].md
+++ b/ch04[외부화 설정관리].md
@@ -148,11 +148,118 @@ POLAR_GREETING="welcome env" java -jar build/libs/catalog-service-0.0.1-SNAPSHOT
 ![img_3.png](images/ch04/img_3.png)
 
 ## 4.3 스프링 클라우드 컨피그 서버로 중앙식 설정 관리하기
+- 환경 변수를 사용하더라도 처리할 수 없는 문제가 있다.
+  - 설정 데이터를 어디에 저장해야할까?
+  - 설정 데이터에 대한 액세스를 어떻게 제어할 수 있을까?
+  - 설정 데이터의 수정을 추적하고 릴리스에 사용된 설정을 감시해야할까?
+  - 인스턴스가 여러개가 되면 분산설정을 어떤식으로 처리해야 할까?
+- 스프링 생태계는 이러한 문제를 다룰수 있는 다양한 방법이 있다. 총 3가지 유형으로 분류된다.
+  - `설정 서비스`
+    - 스프링 클라우드 콘술 & 하시코프 콘술
+    - 스프링 클라우드 볼트 & 하시코프 볼트
+    - 스프링 클라우드 컨피그 & 깃 & 하시코프 볼트
+    - 스프링 클라우드 주키퍼 & 아파치 주키퍼
+  - `클라우드 공급업체 서비스`
+    - 스프링 클라우드 aws + aws secret manager, aws parameter store
+    - 스프링 클라우드 애저 + 키볼트
+  - `클라우드 플랫폼 서비스`
+    - 쿠버네티스 플랫폼에서 스프링 실행시 configmap 및 시크릿 사용
+
+> 설정 서버를 사용할때 기본적으로 최소한 두 개의 복제본을 배포해야 한다.
 
 ### 4.3.1 깃을 통한 설정 데이터 저장
 ### 4.3.2 설정 서버 구성
+#### 프로젝트 부트스트래핑
+````shell
+plugins {
+    id 'org.springframework.boot' version '2.7.18'
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+    id 'java'
+}
+
+group = 'com.polarbookshop'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
+
+description = 'Provides functionality for centralizing the application configuration.'
+
+repositories {
+    mavenCentral()
+}
+
+ext {
+    set('springCloudVersion', "2021.0.9") #버전
+}
+
+dependencies {
+    implementation 'org.springframework.cloud:spring-cloud-config-server'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}" #스프링 클라우드 의존성 관리를 위한 BOM
+    }
+}
+tasks.named('test') {
+	useJUnitPlatform()
+}
+````
+- 스프링 클라우드 컨피그 서버
+  - org.springframework.cloud:spring-cloud-config-server
+- 스프링 부트 테스트
+  - org.springframework.boot:spring-boot-starter-test
+
+#### 설정 서버 활성화
+````java
+@SpringBootApplication
+@EnableConfigServer //설정 서버 활성화
+public class ConfigServiceApplication {
+	public static void main(String[] args) {
+		SpringApplication.run(ConfigServiceApplication.class, args);
+	}
+}
+````
+#### 설정 서버 설정
+````yaml
+server:
+  port: 8888
+  tomcat:
+    connection-timeout: 2s
+    keep-alive-timeout: 15s
+    threads:
+      max: 50
+      min-spare: 5
+
+spring:
+  application:
+    name: config-service
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/PolarBookshop/config-repo #깃헙의 저장소를 가리킨다.
+          default-label: main #서버는 main 브랜치에서 설정 데이터를 반환한다.
+          timeout: 5 #원격 저장소와의 연결시 시간 한도
+          clone-on-start: true #서비스 시작시 리모트 저장소의 복제본을 로컬에 저장
+          force-pull: true #로컬 저장본이 원격과 다를경우 무조건 원격 저장소로부터 다운로드
+
+````
+
 ### 4.3.3 복원력 높은 설정 서버 생성
+- 컨피그 서비스는 시스템의 단일 장애 지점이 될 수 있다.
+- 애플리케이션이 설정 서비스를 사용하면, 설정 서비스는 높은 가용성을 가져야 한다.
+- `원격 저장소`와의 연결에 **너무 많은 시간을 기다리지 않도록 타임아웃을 정의**할 수 있다.
+  - git.timeout (위 config 참조)
+- 스프링 클라우드 컨피그는 설정 데이터를 최초로 가져온 후에 로컬에 복제한다.
+  - git.clone-on-start => 저장소 복제가 서비스 시작시 이루어지도록 true 권장
+- 로컬 복사본과 원격 저장소 설정이 달라질 수 있다.
+  - git.force-pull 설정시, 원격과 달리진다면 로컬 복제본을 삭제하고 데이터를 새로 가져온다.
+- 필요한경우 속성이 복제되는 위치를 지정할 수 있다.
+  - git.basedir
 ### 4.3.4 설정 서버 REST API 이해
+- 스프링 클라우드 컨피그 서버는 {application},{profile},{label} 의 서로 다른 조합을 사용한 엔드포인트를 통해 속성을 제공한다.
+
 
 ## 4.4 스프링 클라우드 컨피그 클라이언트로 설정 서버 사용
 ### 4.4.1 설정 클라이언트 구축
