--- a/ch04[외부화 설정관리].md
+++ b/ch04[외부화 설정관리].md
@@ -260,11 +260,88 @@ spring:
 ### 4.3.4 설정 서버 REST API 이해
 - 스프링 클라우드 컨피그 서버는 {application},{profile},{label} 의 서로 다른 조합을 사용한 엔드포인트를 통해 속성을 제공한다.
 
-
 ## 4.4 스프링 클라우드 컨피그 클라이언트로 설정 서버 사용
+- 스프링 클라우드 컨피그 클라이언트를 사용해 카탈로그 서비스를 설정 서버와 통합하는 방법에 대해 설명한다.
+- `새로운 변경사항`이 **설정 저장소로 푸시될 때마다 일어나는 상호작용**을 어떻게 하면 더욱 견고하게 할 수 있는지
+- `클라이언트의 설정`을 **어떻게 갱신**할 수 있는지 살펴본다.
+
 ### 4.4.1 설정 클라이언트 구축
+- `스프링 클라우드 클라이언트 의존성` catalog-service에 **새로 추가**
+````shell
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+````
+![1](images/ch04/img_4.png)
 ### 4.4.2 내결함성이 높은 설정 클라이언트의 구축
+- 설정 서버와 통합이 필수인 경우, 애플리케이션 설정 서버에 연결할 수 없다면 애플리케이션은 시작하지 못한다.
+- 설정 서버가 작동하고 있더라도, 분산 환경에서 상호작용이 일어나기 때문에 문제가 발생할 수 있다.
+  - 애플리케이션이 신속히 실패하도록 타임아웃을 정의하는 것이 좋다.
+  - `spring.cloud.config.request-connect-timeout` 을 사용해 타임아웃을 제어할 수 있다.
+    - 설정 서버에 **연결 될때 까지 기다리는 시간**
+  - `spring.cloud.config.request-read-timeout` 을 사용하면 설정 데이터를 읽는 데 걸리는 시간을 제한할 수 있다.
+    - 설정 서버에서 설정 **데이터를 읽을때까지 기다리는 시간**
+- 설정 서버에 연결이 안 된다고 해서 실패 상태로 바로 가기 보다는 `재시도(retry) 패턴을 활용`해 설정 서버에 연결을 재시도하도록 설정할 수 있다.
+- 카탈로그 서비스에 retry 추가
+````shell
+dependencies {
+  ...
+  implementation 'org.springframework.retry:spring-retry'
+  ...
+}
+````
+````yaml
+server:
+  port: 9001
+  tomcat:
+    connection-timeout: 2s
+    keep-alive-timeout: 15s
+    threads:
+      max: 50
+      min-spare: 5
+
+spring:
+  application:
+    name: catalog-service #설정 서버가 올바른 설정 데이터를 반환하기 위해서는 애플리케이션 이름을 사용한다.
+  config:
+    import: "optional:configserver:" #설정 서버와의 상호작용을 선택적으로 만들 수 있다(config 서버가 꺼져있어도 애플리케이션은 켜진다.)
+  cloud:
+    config:
+      uri: http://localhost:8888  #컨피그 서버 uri
+      request-connect-timeout: 5000 # 5s, 설정 서버에 연결될때까지 기다리는 시간
+      request-read-timeout: 5000 # 5s, 설정 서버에서 설정 데이터를 읽을때까지 기다리는 시간
+      fail-fast: false # In production, set to true, 설저 서버 연결 실패를 치명적 오류로 인식
+      retry:
+        max-attempts: 6 # 시도 최대 횟수
+        initial-interval: 1000 # 1s, 최초 재시도 지연 시간
+        max-interval: 2000 # 2s, 재시도 지연 최대 시간
+        multiplier: 1.1 # 지연 시간 계산 승수    
+````
+
 ### 4.4.3 런타임 시 설정 새로고침
+- 표준 스프링 부트 애플리케이션에서는 `속성을 변경`하고 `반영`하려면 **애플리케이션을 다시 시작**해야 한다.
+- `스프링 클라우드 컨피그`는 클라이언트 애플리케이션에서 설정을 업데이트할 수 있는 다양한 방법을 제공한다.
+  - 새로고침을 위한 **핫 리로드(hot reload)** 라는 간단한 방법을 살펴본다.
+    => 카탈로그 서비스 인스턴스에 특수한 POST 요청을 보내 변경된 설정 데이터를 재로드하게 한다.
+
+#### 설정 새로고침 활성화
+- 카탈로그 서비스
+````shell
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+}
+````
+````yaml
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
+````
+
+#### 런타임에 설정 변경
 
 ## 요약
 
