Update ch05[클라우드에서 데이터 저장과 관리].md

--- a/ch05[클라우드에서 데이터 저장과 관리].md
+++ b/ch05[클라우드에서 데이터 저장과 관리].md
@@ -5,17 +5,87 @@
 > - 스프링 부트 및 테스트컨테이너를 이용한 데이터 지속성 테스트
 > - 플라이웨이를 사용한 프로덕션 환경에서의 데이터베이스 관리
 
+- `상태`는 서비스를 종료하고 새로운 인스턴스를 만들 때 보존되어야 하는 모든 것이다.
+  - PostgreSQL, 카산드라, 래빗MQ, 카프카 등
+- `플라이웨이`를 사용해 프로덕션에서 `데이터베이스를 관리` 및 발전시키는것을 다룬다.
 ## 5.1 클라우드 네이티브 시스템을 위한 데이터베이스
+- 클라우드 네이티브 애플리케이션을 설계할 때, 데이터에 가장 적합한 저장소 유형을 고려해야한다.
 
 ### 5.1.1 클라우드에서의 데이터 서비스
+- `데이터 서비스`는 상태를 저장하고자 설계된 `클라우드 네이티브 아키텍처`의 **구성 요소**다.
+
 #### 데이터 서비스가 직면하는 도전
+- `가장 적합한 기술을 선택`하기 위해 **고려해야 할 몇 가지 속성**이 있다.
+  - `확장성`
+    - 워크로드 증가 가능성을 지원하고 `탄력적`으로 대응해야 한다.
+  - `복원력`
+    - `실패`에 대해 복원력이 있어야 한다.
+    - 데이터 복제 : 비용은 많이 들지만 복원력은 훨씬 더 좋아진다.
+  - `성능`
+  - `컴플라이언스`
+    - 지속성 데이터는 법률,규정 또는 고객 계약에 의해 보호되는 정보를 포함하기 때문에 법률이나 계약에 따라야한다.
+
 #### 데이터 서비스의 범주
+- 사용자가 관리 => 사용자가 스토리지, 확장성, 복원력, 성능을 모두관리(복잡성은 늘어나지만, 통제력은 커진다)
+  - ex) PostgreSQL, 레디스, 몽고, 마리아DB
+- 클라우드 공급자가 관리
+  - 빅쿼리, 애저 코스모스DB, 애저 PostgreSQL
 
 ### 5.1.2 PostgresSQL을 컨테이너로 실행
+- 대부분의 클라우드 공급업체는 PostgreSQL를 관리형 서비스로 제공한다.
+````shell
+docker run -d \
+    --name polar-postgres \  #컨테이너 이름
+    -e POSTGRES_USER=user \  #관리자 이름
+    -e POSTGRES_PASSWORD=password \  # 관리자 pw
+    -e POSTGRES_DB=polardb_catalog \  #생성할 DB 이름
+    -p 5432:5432 \
+    postgres:14.12 #도커에서 자동으로 다운
+````
 
 ## 5.2 스프링 데이터에 대한 데이터 지속성 JDBC
+- 스프링 데이터 프로젝트를 통해 다양한 데이터 지속성 기술을 지원한다.
+  - 관계형(JDBC, JPA, R2DBC)
+  - 비관계형 데이터베이스(Cassandra, Redis, Neo4J, MongoDB)
+- 데이터베이스 드라이버
+  - 특정 데이터베이스와의 통합을 제공
+- 엔티티
+  - 데이터베이스에 저장되는 도메인 객체
+- 리포지터리
+  - 데이터베이스에만 속하는 고유 기능을 제공하기 위해 기본 구현을 확장한 모듈 제공
+
+> 스프링 데이터 JDBC 아니면 스프링 데이터 JPA?
+> - 스프링 데이터는 애플리케이션을 JDBC 드라이버를 통해 관계형 데이터베이스와 통합하기 위해 JDBC와, JPA 두개를 제공한다.
+> - JPA 사양을 구현한 것 중 하이버네이트가 가장 많이 쓰인다.
+> - 스프링 데이터 JDBC는 최근 스프링 데이터 제품군에 추가된 모듈이다.
+>   - 집계, 집계 루트(aggregate roots), 리포지터리와 같은 DDD(도메인주도설계) 개념을 따라 데이터베이스를 통합한다.
+>   - 도메인을 다루는 MSA의 경우 **스프링 데이터 JDBC는 가볍고 단순하며 탁월한 선택**이다.
+
 ### 5.2.1 JDBC로 데이터베이스에 연결
+````shell
+dependencies {
+  ....
+  implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+  runtimeOnly 'org.postgresql:postgresql'
+  ...
+}
+````
+````yaml
+spring:
+  # ..... 상위 설정
+  datasource: 
+    username: user
+    password: password
+    url: jdbc:postgresql://localhost:5432/polardb_catalog
+    hikari:
+      connection-timeout: 2000 #ms 풀에서 연결 객체를 얻기 위해 기다려야 하는 최대 시간
+      maximum-pool-size: 5  #히카리CP가 풀에 최대한으로 유지할 수 있는 연결 객체의 수
+````
+> **히카리 풀 크기에 대한 분석**
+> - https://github.com/brettwooldridge/HikariCP/wiki/About-Pool-Sizing
+
 ### 5.2.2 스프링 데이터를 통한 지속성 엔티티 정의
+- 
 #### 도메인 클래스에 지속성 부과
 #### 데이터베이스 스키마 생성
 
